--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
@@ -1,13 +1,13 @@
 {% extends"customer_console_base.html" %}
 
-{% block content %}
+{% block content %}k
 
 <div class="row">
 
-    <div class="col-6">
+    <div class="col-lg-6">
 
         <div class="row">
-           <div class="col-6">
+           <div class="col-lg-6">
                 <div class="card">
                     <div class="card-body">
                         <div class="text-center">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-           <div class="col-6">
+           <div class="col-lg-6">
                 <div class="card">
                     <div class="card-body">
                         <div class="text-center">
@@ -148,7 +148,7 @@
     </div>
 
 
-    <div class="col-6">
+    <div class="col-lg-6">
 {#  Show appointments  #}
         <div class="card card-widget">
         <div class="card-body">
