--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
@@ -44,32 +44,74 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-            <li><a href="{{ url_for('control_system') }}">Control System</a></li>
+            <li><a href="{{ url_for('control_system') }}" data-locale="Control System">Control System</a></li>
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-locale="Dropdown">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
-                <li><a href="#">Check Customer Information</a></li>
-                <li><a href="{{ url_for('unchecked') }}">Check Appointments</a></li>
-                <li><a href="{{url_for('staff_questions')}}">Check Questions</a></li>
-                <li><a href="#">Add Appointment</a></li>
-                <li><a href="{{url_for('staff_checkpets')}}">Check Pets</a></li>
+                <!-- <li><a href="#">Check Customer Information</a></li> -->
+                <li><a href="{{ url_for('unchecked') }}" data-locale="Check Appointments">Check Appointments</a></li>
+                <li><a href="{{url_for('staff_questions')}}" data-locale="Check Questions">Check Questions</a></li>
+                <!-- <li><a href="#">Add Appointment</a></li> -->
+                <li><a href="{{url_for('staff_checkpets')}}" data-locale="Check Pets">Check Pets</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Advanced Operations</a></li>
+                <!-- <li><a href="#">Advanced Operations</a></li> -->
 
             </ul>
+            </li>
+            <li>
+              <a href="#" id='btn' data-locale="Change Language"></a>
             </li>
         </ul>
         <form class="navbar-form navbar-left">
             <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search with id or name" id="search">
+            <input type="text" class="form-control" placeholder="Search with id or name" id="search" data-locale="Search with id or name">
             </div>
-            <button type="submit" class="btn btn-default" id="searchsubmit">Submit</button>
+            <button type="submit" class="btn btn-default" id="searchsubmit" data-locale="Submit">Submit</button>
         </form>
+        
         </div>
         </div>
     </nav>
     {% block content %}
     {% endblock %}
+
+    <script src="../static/script/jquery.cookie.js"></script>
+    <!-- I18N -->
+    <script src="../static/script/i18n_js/jquery.i18n.properties.min.js"></script>
+    <script type="text/javascript">
+        if ($.cookie("lan") == "zh") {
+            loadProperties('zh');
+        }
+        else{
+            loadProperties('en');
+        }
+        
+        btn.onclick=function(){
+            if($.cookie("lan") =="zh"){
+                loadProperties('en');
+                $.cookie('lan', 'en');
+            }else{
+                loadProperties('zh');
+                $.cookie('lan', 'zh');
+            }
+        };
+        function loadProperties(lang) {
+            $.i18n.properties({
+                name: 'strings',    //属性文件名     命名格式： 文件名_国家代号.properties
+                path: '../static/i18n/',   //注意这里路径是你属性文件的所在文件夹
+                mode: 'map',
+                language: lang,     //这就是国家代号 name+language刚好组成属性文件名：strings+zh -> strings_zh.properties
+                callback: function () {
+                    $("[data-locale]").each(function () {
+                        console.log($(this).data("locale"));
+                        $(this).html($.i18n.prop($(this).data("locale")));
+
+                    });
+                }
+            });
+        }
+    </script>
+     
   </body>
 
 </html>
