--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_questiondetail.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_questiondetail.html
@@ -22,7 +22,7 @@
 <div class="col-md-9 col-md-offset-1">
     <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">
+        <h3 class="panel-title" data-locale="Answer">
             Answer
         </h3>
     </div>
@@ -41,10 +41,10 @@
 <div class="col-md-10">
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">
-            Please answer the question.
+        <h3 class="panel-title" data-locale="Please answer the question">
+            Please answer the question
         </h3>
-        <button type="button" class="btn btn-default btn-sm" onclick="window.location.href='/staff_questions/answer_question/{{question.id}}'">Answer</button>
+        <button type="button" class="btn btn-default btn-sm" onclick="window.location.href='/staff_questions/answer_question/{{question.id}}'" data-locale="Answer">Answer</button>
     </div>
 
 </div>
