--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_questions.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_questions.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section>
     <div class="container-fluid">
-      <span><strong>Click question to check detail and answer it.</strong></span>
+      <span><strong data-locale="Click question to check detail and answer it"></strong></span>
     </div>
 <br>
     {% if unanswered_questions %}
@@ -11,11 +11,11 @@
         <div class="row row-centered">
             <div class="well col-md-12">
                 <table class="table">
-                        <caption><h3>Unanswered Questions</h3></caption>
+                        <caption><h3 data-locale="Unanswered Questions"></h3></caption>
                     <thead>
                         <tr>
-                            <th width="40%">Title</th>
-                            <th width="40%">Time</th>
+                            <th width="40%" data-locale="Title">Title</th>
+                            <th width="40%" data-locale="Time">Time</th>
                             <th width="20%"></th>
                         </tr>
                     </thead>
@@ -25,7 +25,7 @@
                         <tr >
                             <td onclick="location.href='/staff_questions/{{unanswered_question.id}}'">{{unanswered_question.title}}</td>
                             <td onclick="location.href='/staff_questions/{{unanswered_question.id}}'">{{unanswered_question.time}}</td>
-                            <td><div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/delete/{{unanswered_question.id}}'" role="button">Delete</div></td>
+                            <td><div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/delete/{{unanswered_question.id}}'" role="button" data-locale="Delete">Delete</div></td>
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -42,11 +42,11 @@
         <div class="row row-centered">
             <div class="well col-md-12 col-centered">
                 <table class="table">
-                <caption><h3>Answered Questions</h3></caption>
+                <caption><h3 data-locale="Answered Questions"></h3></caption>
                     <thead>
                         <tr>
-                            <th width="40%">Title</th>
-                            <th width="40%">Time</th>
+                            <th width="40%" data-locale="Title">Title</th>
+                            <th width="40%" data-locale="Time">Time</th>
                             <th width="20%"></th>
                         </tr>
                     </thead>
@@ -56,7 +56,7 @@
                         <tr >
                             <td onclick="location.href='/staff_questions/{{answered_question.id}}'">{{answered_question.title}}</td>
                             <td onclick="location.href='/staff_questions/{{answered_question.id}}'">{{answered_question.time}}</td>
-                            <td><div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/delete/{{answered_question.id}}'" role="button">Delete</div></td>
+                            <td><div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/delete/{{answered_question.id}}'" role="button" data-locale="Delete">Delete</div></td>
                         </tr>
                         {% endfor %}
                     </tbody>
