Fixed bugs & Add about us page in customer part
canceled the function of reservation form at the bottom of the index page; delete the useless letter 'k' in the customer_main page; fixed the footer's position in customer_mypets. Add the about us page in customer part.

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
@@ -149,7 +149,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" aria-expanded="false">
+                        <a href="{{url_for('customer_aboutus')}}" aria-expanded="false">
                             <i class="icon-badge menu-icon"></i><span class="nav-text" data-locale="About Us"></span>
                         </a>
                     </li>
