--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
@@ -1,6 +1,6 @@
 {% extends"customer_console_base.html" %}
 {% block content %}
-    <div class="content=inner">
+    <div class="container">
         <header class="page-header">
             <div class="container-fluid">
                 <div class="row">
@@ -13,6 +13,7 @@
                 </div>
             </div>
         </header>
+    </div>
 
     <section class="tables">
             <div class="container-fluid">
