--- a/HospitalSystem/HospitalSystem/systemapp/templates/index.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/index.html
@@ -489,7 +489,7 @@
                     <textarea name="form_message" required=""></textarea>
                 </div>
                 <div class="form-group text-center">
-                    <button type="submit" class="btn-style-one" data-locale="submit now"></button>
+                    <a class="btn-style-one" data-locale="submit now"></a>
                 </div>
             </div>
         </div>
