Removed extra character and menu problem on 'check_appointment' page

--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
@@ -22,10 +22,11 @@
   <body>
 
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/js//bootstrap-hover-dropdown.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap_v4/bootstrap.bundle.min.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='bootstrap_v4/bootstrap.min.js') }}"></script> -->
+   
+    <!-- <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script> -->
+    <!-- <script src="{{ url_for('static', filename='bootstrap/js//bootstrap-hover-dropdown.min.js') }}"></script> -->
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
