--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_mypets.html
@@ -60,7 +60,7 @@
                                             
                                         {% endfor %}                         
                                         <td><a class="btn btn-primary btn-sm" href="/update_pet/{{pet.id}}" role="button" data-locale="Edit">Edit</a>
-                                        <a class="btn btn-primary btn-sm" href="/delete_pet/{{pet.id}}" role="button" data-locale="Delete">Delete</a></td>
+                                        <a class="btn btn-primary btn-sm"  id="Delete" href="/delete_pet/{{pet.id}}" role="button" onclick="if(confirm('Are you sure you want to delete this pet?')==false)return false;" data-locale="Delete">Delete</a></td>
                                     </tr>
                                 {% endfor%}
                             </tbody>
@@ -74,5 +74,8 @@
               </div>
             </div>
     </section>
-    
+    <script>
+
+
+</script>
 {% endblock %}
